--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
+alembic==1.13.1
 aniso8601==9.0.1
 attrs==23.2.0
 black==24.4.2
 blinker==1.8.2
+build==1.2.1
 click==8.1.7
 Flask==3.0.3
+Flask-Cors==4.0.1
 Flask-JWT-Extended==4.6.0
+Flask-Migrate==4.0.7
 flask-restx==1.3.0
 Flask-SQLAlchemy==3.1.1
 greenlet==3.0.3
@@ -13,16 +17,21 @@ itsdangerous==2.2.0
 Jinja2==3.1.4
 jsonschema==4.22.0
 jsonschema-specifications==2023.12.1
+Mako==1.3.5
 MarkupSafe==2.1.5
 mypy-extensions==1.0.0
 packaging==24.0
 pathspec==0.12.1
+pip-tools==7.4.1
 platformdirs==4.2.2
 PyJWT==2.8.0
+pyproject_hooks==1.1.0
 python-decouple==3.8
 pytz==2024.1
 referencing==0.35.1
 rpds-py==0.18.1
+setuptools==70.0.0
 SQLAlchemy==2.0.30
-typing_extensions==4.12.0
+typing_extensions==4.12.1
 Werkzeug==3.0.3
+wheel==0.43.0
